- Added token setting to server side project - Minor fix tfor UI when exception occurs

--- a/BlazorWeather.Server/appsettings.json
+++ b/BlazorWeather.Server/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "WeatherServiceUri": "https://dataservice.accuweather.com/"
+  "WeatherServiceUri": "https://dataservice.accuweather.com/",
+  "accuweathertoken": "** Insert your Token here ***"
 }
